<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <EditText
       android:layout_width="160dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       android:id="@+id/enter_value_here"
       app:layout_constraintTop_toTopOf="parent"
       android:hint="@string/enter_value_here"
       android:inputType="numberDecimal" />
 <TextView
     android:id="@+id/select_units_below"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/enter_value_here"
     android:text="@string/select_the_units_below"
     />
    <RadioGroup
        android:id="@+id/unit_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/kg_option"
        app:layout_constraintTop_toBottomOf="@id/select_units_below"
        app:layout_constraintStart_toStartOf="parent"> <!--Radio buttons-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kg_option"
            android:text="@string/kilograms"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbs_option"
            android:text="@string/pounds"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grams_option"
            android:text="@string/grams"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tonnes_option"
            android:text="@string/tonnes"
            />

    </RadioGroup>
    <TextView
        android:id="@+id/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/unit_options"
        app:layout_constraintStart_toStartOf="@id/unit_options"
        android:text="@string/convert_to"/>
    <RadioGroup
        android:id="@+id/unit_options2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/kg2_option"
        app:layout_constraintTop_toBottomOf="@id/convert_to"
        app:layout_constraintStart_toStartOf="@id/convert_to">
        <!--Radio buttons-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kg2_option"
            android:text="@string/kilograms"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbs2_option"
            android:text="@string/pounds"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grams2_option"
            android:text="@string/grams"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tonnes2_option"
            android:text="@string/tonnes"
            />

    </RadioGroup>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/unit_options2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/result"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/round_off"
         />
    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/round_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/convert"/>




</androidx.constraintlayout.widget.ConstraintLayout>